--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,6 +9,7 @@
 # locked-title=no
 
 font=monospace:size=12
+#font=JetBrainsMono Nerd Font Regular:size=12
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
