--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,12 +1,12 @@
 # -*- conf -*-
 
-# shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-# term=foot (or xterm-256color if built with -Dterminfo=disabled)
-# login-shell=no
+shell=/bin/bash
+term=xterm-256color
+login-shell=yes
 
-# app-id=foot # globally set wayland app-id. Default values are "foot" and "footclient" for desktop and server mode
-# title=foot
-# locked-title=no
+app-id=foot
+title=foot
+locked-title=no
 
 font=monospace:size=12
 #font=JetBrainsMono Nerd Font Regular:size=12
