--- a/.config/sway/config.d/90-autostart.conf
+++ b/.config/sway/config.d/90-autostart.conf
@@ -5,7 +5,9 @@ exec mako --config ${XDG_CONFIG_HOME}/make/config
 exec wl-paste -t text --watch clipman store --no-persist
 exec nm-applet --indicator
 exec /usr/libexec/polkit-gnome-authentication-agent-1
-exec gnome-keyring-daemon --start --replace --control-directory=${XDG_RUNTIME_DIR}/keyring --components=pkcs11,secrets,ssh
+exec gnome-keyring-daemon --start --replace \
+    --control-directory=${XDG_RUNTIME_DIR}/keyring \
+    --components=secrets
 
 workspace 1
 exec thunar
@@ -13,6 +15,8 @@ workspace 2
 exec firefox-wayland
 workspace 3
 exec alacritty
+exec foot
 workspace 4
+exec alacritty
 exec foot
 
