--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,36 +1,99 @@
-# Address
-bind_to_address "127.0.0.1"
-port            "6600"
+# Bind MPD to a Unix Socket, or IP/Port
+
 bind_to_address	"/run/user/1000/mpd.sock"
 
-#user  "wandsas"
+bind_to_address "127.0.0.1"
+port            "6600"
 
-replaygain			        "auto"
-restore_paused		      "yes"
-auto_update             "yes"
-auto_update_depth       "4"
-follow_inside_symlinks  "yes"
 
-# Directories
-music_directory		 "/home/wandsas/music"
-playlist_directory "/home/wandsas/.cache/mpd/playlists"
+# Loglevel: notice, info, verbose, warning, error
+log_level "notice"
+
+
+metadata_to_use "artist,album,title,track,name,date,comment"
+
+replaygain			   "auto"
+restore_paused		   "yes"
+auto_update            "yes"
+auto_update_depth      "4"
+follow_inside_symlinks "yes"
+
+
+# -*- Permissions -*-
+
+#user  "nobody"
+#group "nogroup"
+
+#password "password@read,add,control,admin"
+
+#default_permissions "read,add,control,admin"
+
+
+# -*- storage plugins (local,curl,nfs,udisks) -*-
+music_directory	"/home/wandsas/music"
+#music_directory "nft://z620.lan/music?version=4"
+
+playlist_directory   "/home/wandsas/.cache/mpd/playlists"
 # env vars to reload mpd's last session state 
 state_file "/home/wandsas/.cache/mpd/state"
 # db for dynamic song info
 sticker_file "/home/wandsas/.cache/mpd/sticker.sql"
 
-#db_file "/home/wandsas/.cache/mpd/database"
 database {
        plugin          "simple"
        path            "/home/wandsas/.cache/mpd/db"
        cache_directory "/home/wandsas/.cache/mpd/cache"
 }
 
+#input {
+#    plugin "curl"
+#    proxy "proxy.local"
+#}
+
+#archive_plugin {
+#    name "zzip"
+#    enabled "no"
+#}
+
+#input_cache {
+#    size "1 GB"
+#}
+
+# -*- recorder output -*-
+
+#audio_output {
+#   type        "recorder"
+#   name        "My recorder"
+#   encoder     "vorbis"        # optional, vorbis or lame
+#   path        "/var/lib/mpd/recorder/mpd.ogg"
+##  quality     "5.0"           # do not define if bitrate is defined
+#   bitrate     "128"           # do not define if quality is defined
+#   format      "44100:16:1"
+#}
+
+
+# -*- HTTP Streaming Server -*-
+
+#audio_output {
+#   type        "httpd"
+#   name        "My HTTP Stream"
+#   encoder     "vorbis"        # optional, vorbis or lame
+#   port        "8000"
+#   bind_to_address "0.0.0.0"       # optional, IPv4 or IPv6
+##  quality     "5.0"           # do not define if bitrate is defined
+#   bitrate     "128"           # do not define if quality is defined
+#   format      "44100:16:1"
+#   max_clients "0"         # optional 0=no limit
+#}
+
+
+# -*- Audio Output PipeWire -*-
 
 audio_output {
-	type	"pipewire"
-	name	"Pipewire Sound Server"
+	type "pipewire"
+	name "Pipewire Sound Server"
 }
+
 
 #log_file "/home/wandsas/.cache/mpd/mpd.log"
 #pid_file "/home/wandsas/.cache/mpd/mpd.pid"
