--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -19,8 +19,8 @@
 ## MPD clients (eg. ncmpc) also use that location.
 ##
 #
-#mpd_host = 127.0.0.1
-mpd_host = /run/user/1000/mpd.sock
+#mpd_host = /run/user/1000/mpd.sock
+mpd_host = 192.168.1.10
 mpd_port = 6600
 
 mpd_music_dir = ~/music
