--- a/.config/ncmpcpp/config
+++ b/.config/ncmpcpp/config
@@ -5,27 +5,26 @@
 ##############################################################
 #
 ##### directories ######
-##
-## Directory for storing ncmpcpp related files.  Changing it is useful if you
-## want to store everything somewhere else and provide command line setting for
-## alternative location to config file which defines that while launching
-## ncmpcpp.
-##
 #
-##ncmpcpp_directory = ~/.config/ncmpcpp
+#ncmpcpp_directory = ~/.config/ncmpcpp
 #
-##
-## Directory for storing downloaded lyrics. It defaults to ~/.lyrics since other
-## MPD clients (eg. ncmpc) also use that location.
-##
-#
-#mpd_host = /run/user/1000/mpd.sock
-mpd_host = 192.168.1.10
-mpd_port = 6600
-
-mpd_music_dir = ~/music
-
+#lyrics_directory = ~/.lyrics
 lyrics_directory = ~/.cache/ncmpcpp/lyrics
+#
+#### connection settings #####
+#
+#mpd_host = 127.0.0.1
+mpd_host = /run/user/1000/mpd.sock
+#
+mpd_port = 6600
+#
+#mpd_password = ""
+#
+#mpd_connection_timeout = 5
+#
+#### needed for tag editor and file operations to work
+#
+mpd_music_dir = ~/music
 #
 #mpd_crossfade_time = 5
 #
