--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,21 +1,9 @@
-# Bind MPD to a Unix Socket, or IP/Port
+
+# -*- Bind Address -*-
 
 bind_to_address	"/run/user/1000/mpd.sock"
 bind_to_address "127.0.0.1"
 port            "6600"
-
-
-# Loglevel: notice, info, verbose, warning, error
-log_level "notice"
-
-
-metadata_to_use "artist,album,title,track,name,date,comment"
-
-replaygain			   "auto"
-restore_paused		   "yes"
-auto_update            "yes"
-auto_update_depth      "4"
-follow_inside_symlinks "yes"
 
 
 # -*- Permissions -*-
@@ -23,19 +11,31 @@ follow_inside_symlinks "yes"
 #user  "nobody"
 #group "nogroup"
 
-#password "password@read,add,control,admin"
-
-#default_permissions "read,add,control,admin"
+password    "MY_MUSIC@read,add,control,admin"
 
 
-# -*- storage plugins (local,curl,nfs,udisks) -*-
+# -*- Metadata wanted to use -*-
+
+metadata_to_use "artist,album,title,track,name,date,comment"
+
+
+# -*- Loglevel: notice, info, verbose, warning, error -*-
+
+#log_level "notice"
+
+
+# -*- storage -*-
+
 music_directory	"/home/wandsas/music"
-#music_directory "nft://z620.lan/music?version=4"
+#music_directory "nfs://z620.lan/music?version=4"
 
+# -*- playlists -*-
 playlist_directory   "/home/wandsas/.cache/mpd/playlists"
-# env vars to reload mpd's last session state 
+
+# -*- last mpd session reload -*- 
 state_file "/home/wandsas/.cache/mpd/state"
-# db for dynamic song info
+
+# -*- dynamic song info -*-
 sticker_file "/home/wandsas/.cache/mpd/sticker.sql"
 
 database {
@@ -44,19 +44,10 @@ database {
        cache_directory "/home/wandsas/.cache/mpd/cache"
 }
 
-#input {
-#    plugin "curl"
-#    proxy "proxy.local"
-#}
-
-#archive_plugin {
-#    name "zzip"
-#    enabled "no"
-#}
-
-#input_cache {
-#    size "1 GB"
-#}
+input {
+    plugin "curl"
+    proxy "proxy.local"
+}
 
 # -*- recorder output -*-
 
@@ -65,8 +56,8 @@ database {
 #   name        "My recorder"
 #   encoder     "vorbis"        # optional, vorbis or lame
 #   path        "/var/lib/mpd/recorder/mpd.ogg"
-##  quality     "5.0"           # do not define if bitrate is defined
-#   bitrate     "128"           # do not define if quality is defined
+#  quality     "5.0"           # do not define if bitrate is defined
+   #bitrate     "128"           # do not define if quality is defined
 #   format      "44100:16:1"
 #}
 
@@ -76,13 +67,12 @@ database {
 #audio_output {
 #   type        "httpd"
 #   name        "My HTTP Stream"
-#   encoder     "vorbis"        # optional, vorbis or lame
+#   encoder     "vorbis" # lame
 #   port        "8000"
-#   bind_to_address "0.0.0.0"       # optional, IPv4 or IPv6
-##  quality     "5.0"           # do not define if bitrate is defined
-#   bitrate     "128"           # do not define if quality is defined
+#   quality     "5.0"
+   #bitrate     "128"
 #   format      "44100:16:1"
-#   max_clients "0"         # optional 0=no limit
+#   max_clients "0"
 #}
 
 
