--- a/.config/sway/config.d/10-keyboard.conf
+++ b/.config/sway/config.d/10-keyboard.conf
@@ -3,14 +3,13 @@ input type:keyboard {
   xkb_model pc105
   xkb_layout de
   xkb_variant nodeadkeys
+  xkb_options ctrl:nocaps
 }
 
 
 input type:mouse {
   dwt enabled
   tap enabled
-  natural_scroll enabled
   middle_emulation enabled
-  accel_profile "flat" # disable mouse acceleration (enabled by default; to set it manually, use "adaptive" instead of "flat")
-  pointer_accel 0.5 # set mouse sensitivity (between -1 and 1)
+  natural_scroll disabled
 }
