--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -103,8 +103,8 @@ font=monospace:size=12
 [colors]
 # alpha=1.0
 # alpha-mode=default # Can be `default`, `matching` or `all`
-# background=242424
-# foreground=ffffff
+background=000000
+foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
 
