--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -11,7 +11,7 @@ port            "6600"
 #user  "nobody"
 #group "nogroup"
 
-password    "MY_MUSIC@read,add,control,admin"
+#password    "MY_MUSIC@read,add,control,admin"
 
 
 # -*- Metadata wanted to use -*-
