--- a/.config/sway/config.d/25-bindings.conf
+++ b/.config/sway/config.d/25-bindings.conf
@@ -3,6 +3,6 @@ bindsym Ctrl+$mod+Left  workspace prev
 
 bindsym $mod+Shift+Return exec alacritty
 
-bindsym Ctrl+Return exec thunar
+bindsym Ctrl+$mod+Return exec thunar
 bindsym Ctrl+Shift+Return exec mousepad
 bindsym Ctrl+Shift+t exec xfce4-taskmanager
