--- a/.config/sway/config.d/90-autostart.conf
+++ b/.config/sway/config.d/90-autostart.conf
@@ -5,7 +5,7 @@ exec mako --config ${XDG_CONFIG_HOME}/make/config
 exec wl-paste -t text --watch clipman store --no-persist
 exec nm-applet --indicator
 exec /usr/libexec/polkit-gnome-authentication-agent-1
-exec gnome-keyring-daemon --start --replace \
+exec gnome-keyring-daemon --start \
     --control-directory=${XDG_RUNTIME_DIR}/keyring \
     --components=secrets
 
