--- a/.config/sway/config.d/15-keybindings.conf
+++ b/.config/sway/config.d/15-keybindings.conf
@@ -1,7 +1,7 @@
 bindsym Ctrl+$mod+Left  workspace prev
 bindsym Ctrl+$mod+Right workspace next
 
-bindsym $mod+Shift+Return exec alacritty
+bindsym $mod+Shift+Return exec xterm
 
 bindsym Ctrl+Shift+Return exec thunar
 bindsym Ctrl+$mod+Return exec mousepad
