--- a/.config/sway/config.d/20-themes.conf
+++ b/.config/sway/config.d/20-themes.conf
@@ -8,8 +8,8 @@ set $gnome-schema org.gnome.desktop.interface
 exec_always {
   gsettings set $gnome-schema cursor-theme  "plan9"
   gsettings set $gnome-schema cursor-size   "24"
-  gsettings set $gnome-schema icon-theme    "Fluent"
-  gsettings set $gnome-schema gtk-theme     "Fluent"
+  gsettings set $gnome-schema icon-theme    "Fluent-dark"
+  gsettings set $gnome-schema gtk-theme     "Fluent-Dark"
   gsettings set $gnome-schema color-scheme  "prefer-dark"
   gsettings set $gnome-schema font-name     "JetBrainsMono Nerd Font Regular 12"
 }
