--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,22 +4,19 @@
   <alias>
     <family>monospace</family>
     <prefer>
-        <family>FontAwesome6Free</family>
       <family>JetBrainsMono Nerd Font</family>
     </prefer>
   </alias>
-
-  <alias>
+  <alias>  
     <family>Helvetica</family>
-    <prefer>
+      <prefer>
         <family>Bitstream Vera Sans</family>
     </prefer>
-</alias>
-
+  </alias>
   <alias>
     <family>sans-serif</family>
     <prefer>
-      <family>JetBrainsMono Nerd Font</family>
+      <family>Roboto</family>
     </prefer>
   </alias>
 
