--- a/.config/sway/config.d/90-autostart.conf
+++ b/.config/sway/config.d/90-autostart.conf
@@ -1,18 +1,16 @@
 #
-# -*- Start some tiny helper daemons -*-
+# -*- Start some tiny little helper -*-
 #
-exec mako --config ${XDG_CONFIG_HOME}/make/config
+exec mako --config ${XDG_CONFIG_HOME}/mako/config
 exec wl-paste -t text --watch clipman store --no-persist
 exec nm-applet --indicator
 exec /usr/libexec/polkit-gnome-authentication-agent-1
-exec gnome-keyring-daemon --start \
-    --control-directory=${XDG_RUNTIME_DIR}/keyring \
-    --components=secrets
+exec gnome-keyring-daemon --start --control-directory=${XDG_RUNTIME_DIR}/keyring
 
 workspace 1
 exec thunar
 workspace 2
-exec firefox-wayland
+exec firefox
 workspace 3
 exec foot
 workspace 4
