--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -44,10 +44,10 @@ database {
        cache_directory "/home/wandsas/.cache/mpd/cache"
 }
 
-input {
-    plugin "curl"
-    proxy "proxy.local"
-}
+#input {
+#    plugin "curl"
+#    proxy "proxy.local"
+#}
 
 # -*- recorder output -*-
 
