--- a/.config/sway/config.d/05-displays.conf
+++ b/.config/sway/config.d/05-displays.conf
@@ -2,8 +2,8 @@
 # Dual monitor setup
 #
 
-output HDMI-A-1 res 1680x1050 pos 0 0 bg ~/.local/share/backgrounds/left fill
-output DVI-I-1 res 1680x1050 pos 1680 0 bg ~/.local/share/backgrounds/right fill
+output HDMI-A-1 res 1680x1050 pos 0 0 bg ~/.left fill
+output DVI-I-1 res 1680x1050 pos 1680 0 bg ~/.right fill
 
 workspace 1 output HDMI-A-1
 workspace 2 output HDMI-A-1
