--- a/.config/sway/config.d/15-keybindings.conf
+++ b/.config/sway/config.d/15-keybindings.conf
@@ -1,8 +1,10 @@
 bindsym Ctrl+$mod+Left  workspace prev
 bindsym Ctrl+$mod+Right workspace next
 
+bindsym $mod+Return exec foot
+bindsym Ctrl+Return exec alacritty
 bindsym $mod+Shift+Return exec xterm
 
-bindsym Ctrl+Shift+Return exec thunar
-bindsym Ctrl+$mod+Return exec mousepad
+bindsym Ctrl+Shift+Return exec Thunar
+bindsym Ctrl+Shift+e exec mousepad
 bindsym Ctrl+Shift+t exec xfce4-taskmanager
