--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -2,7 +2,6 @@
   "include": "~/.config/waybar/modules",
   "layer": "top",
   "output": "HDMI-A-1",
-  //"mode": "dock",
   "spacing": 5,
   "fixed-center": true,
   "ipc": true,
@@ -17,7 +16,6 @@
   "include": "~/.config/waybar/modules",
   "layer": "top",
   "output": "DVI-I-1",
-  //"mode": "dock",
   "spacing": 5,
   "fixed-center": true,
   "ipc": true,
@@ -26,5 +24,5 @@
 
   "modules-left": ["sway/workspaces"],
   "modules-center": ["sway/window"],
-  "modules-right": ["mpd", "pulseaudio", "clock", "tray", "custom/power"]
+  "modules-right": ["clock", "tray", "custom/power"]
 }]
