--- a/.config/sway/config.d/50-windows.conf
+++ b/.config/sway/config.d/50-windows.conf
@@ -42,3 +42,6 @@ for_window [app_id="com.belmoussaoui.Authenticator"] {
   floating enable
   move position center
 }
+
+for_window [app_id="thunar"] blur true; opacity 0.70
+for_window [app_id="pcmanfm"] blur true; opacity 0.70
