--- a/.config/sway/config.d/70-autostart.conf
+++ b/.config/sway/config.d/70-autostart.conf
@@ -1,17 +1,31 @@
 #
 # -*- Start some tiny little helper -*-
 #
+
+# minimal notification daemon
 exec mako --config ${XDG_CONFIG_HOME}/mako/config
+
+# copy/paste helper
 exec wl-paste -t text --watch clipman store --no-persist
+
+# network-manager applet
 exec nm-applet --indicator
+
+# Gnome polkit authentication agent
 exec /usr/libexec/polkit-gnome-authentication-agent-1
+
+# Gnome libsecret keychain
 exec gnome-keyring-daemon --start --control-directory=${XDG_RUNTIME_DIR}/keyring
 
+# default apps mapped on workspaces
 workspace 1
-exec thunar
+exec pcmanfm
+exec mousepad
 workspace 2
-exec firefox
+exec foot
+exec alacritty
 workspace 3
+exec alacritty
 exec foot
 workspace 4
-exec foot
+exec firefox
