--- a/.config/sway/config.d/70-autostart.conf
+++ b/.config/sway/config.d/70-autostart.conf
@@ -15,7 +15,7 @@ exec nm-applet --indicator
 exec /usr/libexec/polkit-gnome-authentication-agent-1
 
 # Gnome libsecret keychain
-exec gnome-keyring-daemon --start --control-directory=${XDG_RUNTIME_DIR}/keyring
+exec gnome-keyring-daemon --start -C ${XDG_RUNTIME_DIR}/keyring
 
 # default apps mapped on workspaces
 workspace 1
