--- a/.config/sway/config.d/70-autostart.conf
+++ b/.config/sway/config.d/70-autostart.conf
@@ -19,13 +19,13 @@ exec gnome-keyring-daemon --start -C ${XDG_RUNTIME_DIR}/keyring
 
 # default apps mapped on workspaces
 workspace 1
+exec firefox-wayland
+workspace 2
 exec pcmanfm
 exec mousepad
-workspace 2
-exec foot
-exec alacritty
 workspace 3
+exec foot
+exec alacritty
+workspace 4
 exec alacritty
 exec foot
-workspace 4
-exec firefox
