--- a/.config/sway/config.d/20-windows.conf
+++ b/.config/sway/config.d/20-windows.conf
@@ -43,5 +43,9 @@ for_window [app_id="com.belmoussaoui.Authenticator"] {
   move position center
 }
 
-for_window [app_id="thunar"] blur true; opacity 0.70
-for_window [app_id="pcmanfm"] blur true; opacity 0.70
+for_window [app_id="org.remmina.Remmina"] {
+  floating enable
+  move position center
+}
+
+for_window [app_id="pcmanfm"] opacity 0.70
