--- a/.config/sway/config.d/25-windows.conf
+++ b/.config/sway/config.d/25-windows.conf
@@ -48,4 +48,7 @@ for_window [app_id="org.remmina.Remmina"] {
   move position center
 }
 
-for_window [app_id="pcmanfm"] opacity 0.70
+for_window [app_id="pcmanfm"] opacity 0.50
+for_window [app_id="mousepad"] opacity 0.50
+for_window [app_id="foot"] opacity 0.50
+for_window [app_id="lxtask"] opacity 0.50
