--- a/.config/sway/config.d/25-windows.conf
+++ b/.config/sway/config.d/25-windows.conf
@@ -1,6 +1,6 @@
-#
+
 # Floating window rules
-#
+
 
 for_window [app_id="firewall-config"] {
   floating enable
@@ -50,5 +50,9 @@ for_window [app_id="org.remmina.Remmina"] {
 
 for_window [app_id="pcmanfm"] opacity 0.50
 for_window [app_id="mousepad"] opacity 0.50
-for_window [app_id="foot"] opacity 0.50
 for_window [app_id="lxtask"] opacity 0.50
+for_window [app_id="foot"] opacity 0.70
+for_window [app_id="gnome-disks"] {
+    floating enable
+    move position center
+}
