--- a/.config/sway/config.d/30-dbus-session.conf
+++ b/.config/sway/config.d/30-dbus-session.conf
@@ -9,18 +9,14 @@ exec turnstile-update-runit-env \
     WAYLAND_DISPLAY \
     DISPLAY \
     SWAYSOCK \
-    I3SOCK \
-    XDG_CURRENT_SESSION=sway \
     XDG_SESSION_DESKTOP=sway \
     XDG_SESSION_TYPE=wayland \
-    XCURSOR_THEME=plan9 \
-    XCURSOR_SIZE=24
 
 exec dbus-update-activation-environment \
+    XDG_RUNTIME_DIR \
+    DBUS_SESSION_BUS_ADDRESS \
     WAYLAND_DISPLAY \
     DISPLAY \
-    XDG_CURRENT_SESSION \
+    SWAYSOCK \
     XDG_SESSION_DESKTOP \
     XDG_SESSION_TYPE \
-    XCURSOR_THEME \
-    XCURSOR_SIZE
