--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,8 +1,8 @@
 # -*- conf -*-
 
-shell=/bin/zsh
+#shell=/bin/zsh
 term=xterm-256color
-login-shell=yes
+#login-shell=yes
 
 app-id=foot
 title=foot
