--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -2,6 +2,7 @@
 bindsym $mod+Shift+q kill
 # start menu
 bindsym $mod+d exec wmenu-run
+bindsym Ctrl+Shift+d exec wofi --show run|drun
 
 # terminals
 bindsym $mod+Return 	  exec foot
