changed alacritty keybinding

--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -5,9 +5,9 @@ bindsym $mod+d exec wmenu-run
 bindsym Ctrl+Shift+d exec wofi --show run|drun
 
 # terminals
-bindsym $mod+Return 	  exec foot
+bindsym $mod+Return 	  exec alacritty
 bindsym $mod+Shift+Return exec xterm
-bindsym Ctrl+Return 	  exec alacritty
+bindsym Ctrl+Return 	  exec foot
 # Default apps
 bindsym Ctrl+Shift+Return exec pcmanfm
 bindsym Ctrl+Shift+e 	  exec mousepad
