--- a/.config/sway/config.d/30-dbus-session.conf
+++ b/.config/sway/config.d/30-dbus-session.conf
@@ -19,4 +19,4 @@ exec dbus-update-activation-environment \
     DISPLAY \
     SWAYSOCK \
     XDG_SESSION_DESKTOP \
-    XDG_SESSION_TYPE \
+    XDG_SESSION_TYPE
