--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -14,6 +14,8 @@ bindsym Ctrl+Shift+e 	  exec mousepad
 bindsym Ctrl+Shift+t 	  exec lxtask
 bindsym Ctrl+Shift+b 	  exec firefox-wayland
 
+bindsym Ctrl+Shift+r       exec remote-viewer
+
 # Move between workspaces
 bindsym Ctrl+$mod+Left  workspace prev
 bindsym Ctrl+$mod+Right workspace next
