--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -2,6 +2,8 @@
 bindsym $mod+Shift+q kill
 # start menu
 bindsym $mod+d exec wmenu-run
+bindsym $mod+Shift+d exec passmenu
+#bindsym Ctrl+d exec wofi --show run|drun
 bindsym Ctrl+Shift+d exec wofi --show run|drun
 
 # terminals
