--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -15,7 +15,7 @@
 , {
   "include": "~/.config/waybar/modules",
   "layer": "top",
-  "output": "DVI-I-1",
+  "output": "DVI-D-1",
   "spacing": 5,
   "fixed-center": true,
   "ipc": true,
