--- a/.config/sway/config.d/05-keyboard.conf
+++ b/.config/sway/config.d/05-keyboard.conf
@@ -1,16 +1,18 @@
 
+### Input devices ###
 
-input type:keyboard {
-  xkb_model pc105
-  xkb_layout de
-  xkb_variant nodeadkeys
-  #xkb_options ctrl:nocaps
-}
-
-
+# Default usb-mouse with natural scroll disabled
 input type:mouse {
   dwt enabled
   tap enabled
   middle_emulation enabled
   natural_scroll disabled
+}
+
+# German default keyboard
+input type:keyboard {
+  xkb_model pc105
+  xkb_layout de
+  xkb_variant nodeadkeys
+  xkb_options ctrl_alt_bksp
 }
