--- a/.config/sway/config.d/70-autostart.conf
+++ b/.config/sway/config.d/70-autostart.conf
@@ -3,7 +3,7 @@
 #
 
 # minimal notification daemon
-exec mako --config ${XDG_CONFIG_HOME}/mako/config
+#exec mako --config ${XDG_CONFIG_HOME}/mako/config
 
 # copy/paste helper
 exec wl-paste -t text --watch clipman store --no-persist
