--- a/.config/sway/config.d/00-displays.conf
+++ b/.config/sway/config.d/00-displays.conf
@@ -4,7 +4,7 @@ output HDMI-A-1 res 1680x1050 pos 0 0 bg ~/.left fill
 output DVI-D-1 res 1680x1050 pos 1680 0 bg ~/.right fill
 
 # Assign workspaces to displays
-#workspace 1 output HDMI-A-1
-#workspace 2 output HDMI-A-1
-#workspace 3 output DVI-I-1
-#workspace 4 output DVI-I-1
+workspace 1 output HDMI-A-1
+workspace 2 output HDMI-A-1
+workspace 3 output DVI-I-1
+workspace 4 output DVI-I-1
