--- a/.config/sway/config.d/65-default-workspaces.conf
+++ b/.config/sway/config.d/65-default-workspaces.conf
@@ -1,5 +1,11 @@
 
-# default apps mapped on workspaces
+# Assign workspaces to displays
+workspace 1 output HDMI-A-1
+workspace 2 output HDMI-A-1
+workspace 3 output DVI-D-1
+workspace 4 output DVI-D-1
+
+# default apps assigned to workspaces
 workspace 1
 exec pcmanfm
 workspace 2
