--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,20 +1,54 @@
 [env]
   TERM = "xterm-256color"
 
-[font]
-  size = 12.0
-
 [window]
-  opacity = 0.1
+    opacity = 0.8
 
-[font.bold_italic]
-family = "monospace"
-style = "Bold Italic"
+[cursor.style]
+    shape = "Underline"
+[cursor.vi_mode_style]
+    shape = "Block"
+    
+[font]
+    size = 12.0
+    #custom_cursor_colors = true
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Medium"
 
 [font.italic]
-family = "monospace"
-style = "Italic"
+family = "JetBrainsMono Nerd Font"
+style = "Light Italic"
 
 [font.normal]
-family = "monospace"
-style = "Mono"
+family = "JetBrainsMono Nerd Font"
+style = "Light"
+
+[colors.primary]
+     background = '0x000000'
+     foreground = '0xc5c8c6'
+# Colors the cursor will use if `custom_cursor_colors` is true
+[colors.cursor]
+     text = '0x1d1f21'
+     cursor = '0xc5c8c6'
+# Normal colors
+[colors.normal]
+     black =   '0x1d1f21'
+     red =     '0xcc6666'
+     green =   '0xb5bd68'
+     yellow =  '0xf0c674'
+     blue =    '0x81a2be'
+     magenta = '0xb294bb'
+     cyan =    '0x8abeb7'
+     white =   '0xc5c8c6'
+# Bright colors
+[colors.bright]
+     black =   '0x969896'
+     red =     '0xde935f'
+     green =   '0x282a2e'
+     yellow =  '0x373b41'
+     blue =    '0xb4b7b4'
+     magenta = '0xe0e0e0'
+     cyan =    '0xa3685a'
+     white =   '0xffffff'
