changed switch workspace bindings

--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -19,5 +19,5 @@ bindsym Ctrl+Shift+b 	  exec firefox-wayland
 bindsym Ctrl+Shift+r       exec remote-viewer
 
 # Move between workspaces
-bindsym Ctrl+$mod+Left  workspace prev
-bindsym Ctrl+$mod+Right workspace next
+bindsym Ctrl+Alt+Left  workspace prev
+bindsym Ctrl+Alt+Right workspace next
