--- a/.config/sway/config.d/30-xdg-desktop-session.conf
+++ b/.config/sway/config.d/30-xdg-desktop-session.conf
@@ -9,7 +9,7 @@ exec turnstile-update-runit-env \
     WAYLAND_DISPLAY \
     DISPLAY \
     SWAYSOCK \
-    XDG_SESSION_DESKTOP=sway \
+    XDG_DESKTOP_SESSION=sway \
     XDG_SESSION_TYPE=wayland \
 
 exec dbus-update-activation-environment \
@@ -18,5 +18,5 @@ exec dbus-update-activation-environment \
     WAYLAND_DISPLAY \
     DISPLAY \
     SWAYSOCK \
-    XDG_SESSION_DESKTOP \
+    XDG_DESKTOP_SESSION \
     XDG_SESSION_TYPE
