--- a/.config/sway/config.d/10-keybindings.conf
+++ b/.config/sway/config.d/10-keybindings.conf
@@ -1,19 +1,19 @@
-# kill selected app
+# Kill selected app
 bindsym $mod+Shift+q kill
-# start menu
+# Open menu
 bindsym $mod+d exec wmenu-run
 bindsym $mod+Shift+d exec passmenu
-#bindsym Ctrl+d exec wofi --show run|drun
-bindsym Ctrl+Shift+d exec wofi --show run|drun
+# bindsym Ctrl+d exec wofi --show run|drun
+# bindsym Ctrl+Shift+d exec wofi --show run|drun
 
 # terminals
 bindsym $mod+Return 	  exec alacritty
-bindsym $mod+Shift+Return exec xterm
+# bindsym $mod+Shift+Return exec xterm
 bindsym Ctrl+Return 	  exec foot
 # Default apps
-bindsym Ctrl+Shift+Return exec pcmanfm
-bindsym Ctrl+Shift+e 	  exec mousepad
-bindsym Ctrl+Shift+t 	  exec lxtask
+bindsym Ctrl+Shift+Return exec nautilus
+bindsym Ctrl+Shift+e 	  exec gedit
+bindsym Ctrl+Shift+t 	  exec gnome-system-monitor
 bindsym Ctrl+Shift+b 	  exec firefox-wayland
 
 bindsym Ctrl+Shift+r       exec remote-viewer
