--- a/.config/sway/config
+++ b/.config/sway/config
@@ -105,18 +105,6 @@ set $right l
     # Move focus to the parent container
     bindsym $mod+a focus parent
 #
-# Scratchpad:
-#
-    # Sway has a "scratchpad", which is a bag of holding for windows.
-    # You can send windows there and get them back later.
-
-    # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
-
-    # Show the next scratchpad window or hide the focused scratchpad window.
-    # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
-#
 # Resizing containers:
 #
 mode "resize" {
@@ -141,4 +129,4 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-include $HOME/.config/sway/config.d/*.conf
+include ~/.config/sway/config.d/*.conf
